# open-colmi

./: .gitignore  config.json  main.py  pyproject.toml
docs/ADR/: 000-template.md  011-unify-raw-sensor-decoding.md  README.md
examples/: ble_connection_colmi_ring.py  calculate_sampling_rate.py  get_data_colmi_ring.py  save_data_colmi_ring.py  scan_colmi_ring.py
raw_data/: ring_data_20260716_094622.csv  ring_data_20260716_100410.csv
resampled/: test.ring_data_20260716_094622.csv
src/smart_ring_open.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/smart_ring_open/core/: device.py
src/smart_ring_open/libraries/colmi_r02_client/: battery.py  blink_twice.py  client.py  db.py  hr.py  hr_settings.py  raw_sensor_decoder.py  real_time.py  reboot.py  set_time.py  steps.py
src/smart_ring_open/libraries/colmi_r02_edgeimpulse/: ring.py
tests/unit/: test_raw_sensor_decoder.py
