[project]
name = "smart-ring-open"
version = "0.1.0"
description = "Unified open-source library for smart ring devices"
authors = [{ name = "Paulina Rogala", email = "rogala@student.agh.edu.pl" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pyserial>=3.5",
    "bleak>=0.20.0",  
    "pydantic>=2.0.0",  
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]


